resolve some wrapping issues

--- a/src/Views/Summary/styles.scss
+++ b/src/Views/Summary/styles.scss
@@ -1,19 +1,56 @@
+$tablet: 768px;
+
 .summary-content {
     display:flex;
     justify-content: center;
     margin-top: 60px;
     margin-bottom: 33px;
+    flex-direction: column;
+    align-items: center;
 
     .logo-copy {
         align-self: center;
-        font-size: 24px;
+        font-size: 21px;
         font-weight: 500;
         line-height: 27px;
         margin-left: 21px;
     }
+
+    .summary-icon {
+        width: 60px;
+        margin-bottom: 12px;
+    }
+
 }
     .summary-cta {
-        display: flex;
-        justify-content: center;
-        margin-left: 41%;
+        // display: flex;
+        // justify-content: center;
+        // margin-left: 41%;
+        width: 100%;
+        button {
+        margin: 0 auto;
+    }
+    }
+
+    @media only screen and (min-width: $tablet) {
+        .summary-content {
+            flex-direction: row;
+            align-items: initial;
+
+        .logo-copy {
+            font-size: 24px;
+        }
+
+        .summary-cta {
+            display: flex;
+            justify-content: center;
+            text-align: initial;
+            width: initial;
+
+            button {
+                margin: 0;
+                margin-left: 41%;
+            }
+        }
+     }
     }
